...
					renderItem={({item}) => <Text key={item.letter}><Text style={styles.letter}>{item.letter}</Text> - {item.description}</Text>}
					keyExtractor={(item) => item.letter}
				/>
			</View>
			<View style={uiStyle.container}>
				<TouchableOpacity style={styles.bottomButton} onPress={() => navigation.goBack()}>
					<Text style={uiStyle.buttonLabel}>Back</Text>
				</TouchableOpacity>
			</View>
		</SafeAreaView>
	);
}

...
