...
          <Text key={i} style={uiStyle.buttonLabel}>Report {reports[i].report_id}{description}</Text>
        );
      }
    }
    }
    else{
        <Text key={0} style={uiStyle.buttonLabel}>No such reports.</Text>
    }


    return(
        <SafeAreaView style={uiStyle.container}>
         <View style={styles.titlecontainer}>
...
        </Text>
        <ScrollView>{usersButtons}</ScrollView>
        <TouchableOpacity
          style={[styles.bottomButton, styles.shadowProp]}
          onPress={() => navigation.navigate('Home')}
        >
          <Text style={uiStyle.buttonLabel}>Return to Home</Text>
        </TouchableOpacity>
      </View>
    </SafeAreaView>
    );
}

...
