...
              }else{
                  createAlert();
              };
            }
          }}
        >
          <Text style={uiStyle.buttonLabel}>Submit</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[styles.bottomButton, styles.shadowProp]}
          onPress={() => navigation.navigate('Continue Tests', {screen: 'Create Profile'})}
        >
          <Text style={uiStyle.buttonLabel}>Sign Up</Text>
        </TouchableOpacity>    
      </SafeAreaView>
      </View>
    </SafeAreaView>
   
    );
...
