...
function FurtherTests({ navigation }) {
  const [prelimReportId, setPrelimReportId] = useContext(PrelimReportIdContext);
  const preliminaryReportRepoContext = useContext(PreliminaryReportRepoContext);

  return (
    <View style={uiStyle.container}>
      <Text style={uiStyle.titleText}>Preliminary Tests</Text>
      <ScrollView>
        <Text style={uiStyle.stackedText}>
          There are 5 more tests that will determine the likelihood of the
          affected person having a concussion
          {'\n'}
          {'\n'}
...
            
          });  
          navigation.navigate('Memory Test 1')
        }}
        style={uiStyle.bottomButton}
      >
        <Text style={uiStyle.buttonLabel}>Start!</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({});
...
