...
              sliderTwelveValue + sliderThirteenValue+sliderFourteenValue+sliderFifteenValue+sliderSixteenValue+
              sliderSeventeenValue+sliderEighteenValue+sliderNineteenValue+sliderTwentyValue;
            navigation.navigate('Incident Report Result', {sliderResult: totalSliderValue});
          }}
          style={[styles.bottomButton, uiStyle.shadowProp]}
        >
          <Text style={uiStyle.buttonLabel}>Next</Text>
        </TouchableOpacity>
       
    </SafeAreaView>
  );
}

...
