...
        The injured individual is showing severe symptoms and should seek medical attention immediately.
      </Text>    
      <TouchableOpacity onPress={()=>{
        console.log("Call 000 button was pressed (BadCheckScreen.js)");
        Linking.openURL("tel:0123456789");
      }} style={uiStyle.startCheckButton}>
              <Text style={uiStyle.startCheckText}>Call 000</Text>
      </TouchableOpacity>

      <TouchableOpacity onPress={()=>{

        navigation.navigate('Home Page')
      }} style={styles.bottomButton}>
                <Text style={uiStyle.buttonLabel}>Return Home</Text>
      </TouchableOpacity>
      </ImageBackground>
    </SafeAreaView>
  );
}

...
